[gd_scene load_steps=3 format=3 uid="uid://c8qr5vj4u8kmn"]

[ext_resource type="Script" path="res://VictoryScreen.gd" id="1_victory"]
[ext_resource type="Texture2D" uid="uid://cwxsrfkprmvkl" path="res://assets/menu/bg_asfodelos.png" id="2_bg"]

[node name="VictoryScreen" type="CanvasLayer"]
process_mode = 3
layer = 100
script = ExtResource("1_victory")

[node name="Background" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_bg")
expand_mode = 1

[node name="CenterContainer" type="CenterContainer" parent="Background"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Background/CenterContainer"]
layout_mode = 2

[node name="MessageLabel" type="Label" parent="Background/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.9, 0.6, 1)
theme_override_font_sizes/font_size = 64
text = "Obrigado Por Jogar a Demo"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="Background/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="ButtonsContainer" type="HBoxContainer" parent="Background/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 30
alignment = 1

[node name="PlayAgainButton" type="Button" parent="Background/CenterContainer/VBoxContainer/ButtonsContainer"]
custom_minimum_size = Vector2(250, 60)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 0.9, 0.6, 1)
theme_override_font_sizes/font_size = 28
text = "Jogar Novamente"

[node name="QuitButton" type="Button" parent="Background/CenterContainer/VBoxContainer/ButtonsContainer"]
custom_minimum_size = Vector2(250, 60)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 0.6, 0.6, 1)
theme_override_font_sizes/font_size = 28
text = "Sair"
